# Passport_Office

./: .gitignore  pyproject.toml  run.py  run_test_db.py  start.py  test.sh
bulder/: builder.py
genealogy/: genealogy.py
manager_lib/: lib.py
passport_db/: create_db.sh  db.py  drop_db.sh
passport_office/: 4-clear.json  4.json  7-clear.json  7.json  8-clear.json  8.json  __init__.py  chain.py  client.py  config.py  connection_db.py  interface.py  models.py
strategy/: strategy.py
strategy/files/: json.json
unit_tests/: common.py  conftest.py  factories.py  plugin.py
unit_tests/tests/: test_person_registration.py
