[tool.poetry]
name = "passport-office"
version = "0.1.0"
description = ""
authors = ["Stas Soloviov <stas0601019@gmail.com>"]
readme = "README.md"
packages = [{include = "passport_office"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
